--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.meta.xr.sdk.interaction.ovr": "81.0.0",
+    "com.unity.cloud.gltfast": "6.14.1",
     "com.unity.feature.characters-animation": "1.0.0",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.shadergraph": "17.0.4",
