--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.cloud.gltfast": "6.14.1",
     "com.unity.feature.characters-animation": "1.0.0",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.postprocessing": "3.5.0",
     "com.unity.shadergraph": "17.0.4",
     "com.unity.xr.hands": "1.7.1",
     "com.unity.xr.interaction.toolkit": "3.0.9",
